@@ -1,10 +1,6 @@
 package ch.tie.perf.scenario;
 
-import ch.tie.perf.ScenarioRunner;
-import ch.tie.perf.http.RequestBroker;
-import ch.tie.perf.model.WadoInstance;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import static java.nio.file.Files.lines;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -13,10 +9,14 @@ import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.nio.file.Files.lines;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import ch.tie.perf.ScenarioRunner;
+import ch.tie.perf.http.RequestBroker;
+import ch.tie.perf.model.WadoInstance;
 
 
 public class RunWado extends AbstractScenario {
@@ -29,7 +29,7 @@ public class RunWado extends AbstractScenario {
     try {
       Files.createDirectories(BINARIES_PATH);
     } catch (IOException e) {
-      LOGGER.error("could not create binaries folder: " + BINARIES_PATH, e);
+      LOGGER.error("could not create binaries folder: {}", BINARIES_PATH, e);
     }
   }
 
@@ -39,7 +39,11 @@ public class RunWado extends AbstractScenario {
   private final String inputData;
   private final boolean saveFile;
 
-  public RunWado(final ScenarioRunner scenarioRunner, final RequestBroker rb, final String endpoint, final String inputData, boolean saveFile) {
+  public RunWado(final ScenarioRunner scenarioRunner,
+      final RequestBroker rb,
+      final String endpoint,
+      final String inputData,
+      boolean saveFile) {
     this.scenarioRunner = scenarioRunner;
     this.rb = rb;
     this.endpoint = endpoint;
@@ -51,9 +55,7 @@ public class RunWado extends AbstractScenario {
   @Override
   public RunWado call() {
     for (WadoInstance image : readTestInstances(inputData)) {
-
-      RunGetWadoInstance runWado = new RunGetWadoInstance(scenarioRunner, endpoint, image, rb, saveFile);
-
+      RunGetWadoInstance runWado = new RunGetWadoInstance(endpoint, image, rb, saveFile);
       Future<Scenario> future = scenarioRunner.run(runWado);
       addChildTask(future);
     }
@@ -67,7 +69,7 @@ public class RunWado extends AbstractScenario {
       return stream.map(line -> {
         String[] str = line.split(",");
         return new WadoInstance(str[0], str[1], str[2]);
-      }).collect(Collectors.toList());
+      }).toList();
     } catch (IOException e) {
       LOGGER.error("error in getting wado-instances.csv", e);
     }
